--- a/config.json
+++ b/config.json
@@ -46,16 +46,16 @@
   },
   "nickNameBot": "𝙹𝙰𝙷𝙸𝙳𝚄𝙻 卝 𝚂𝙰𝙶𝙾𝚁࿐ツ",
   "prefix": ",",
-  "ArYanapi": "https://aryan-rest-api.onrender.com",
+  "ArYanapi": "",
   "api": "",
   "api2": "",
   "api3": "",
   "authorName": "𝚂𝚊𝙶𝚘𝚛 🤡",
-  "facebook2": "https://www.facebook.com/raj.vai.404",
-  "facebook": "https://www.facebook.com/ArYan.com.404",
-  "email": "adriyanaryan@yahoo.com",
-  "replit": "https://replit.com/@ARYAN-BOT",
-  "github": "https://github.com/ARYAN-BOT-404",
+  "facebook2": "https://www.facebook.com/Xsagorxnxx",
+  "facebook": "https://www.facebook.com/Xsagorxnxx",
+  "email": "babygithub@gmail.com",
+  "replit": "https://replit.com/@sagorislam00",
+  "github": "https://github.com/sagorislam00",
   "insta": "no",
   "age": "18+",
   "TG": "",
