--- a/config.json
+++ b/config.json
@@ -35,7 +35,7 @@
     "ignoreCommand": []
   },
   "adminBot": [
-    "100048281103451"
+    "100072378825674"
   ],
   "whiteListMode": {
     "enable": false,
@@ -44,8 +44,8 @@
     ],
     "notes": "if you enable this feature, only the ids in the whiteListIds section can use the bot"
   },
-  "nickNameBot": "𝙹𝙰𝙷𝙸𝙳𝚄𝙻 卝 𝚂𝙰𝙶𝙾𝚁࿐ツ",
-  "prefix": ",",
+  "nickNameBot": "𝙓𝘼𝙄𝙆𝙊 卝 𝙅𝙞𝙎𝘼𝙉࿐ツ",
+  "prefix": ".",
   "ArYanapi": "",
   "api": "",
   "api2": "",
