--- a/config.json
+++ b/config.json
@@ -45,7 +45,7 @@
     ],
     "notes": "if you enable this feature, only the ids in the whiteListIds section can use the bot"
   },
-  "nickNameBot": "𝙅𝙄𝙎𝘼𝙉-𝙓𝘼𝙄𝙆𝙊࿐ツ",
+  "nickNameBot": "➳ᴹᴿ᭄𝙹𝙸𝚂𝙰𝙽𖣘𝚇𝙰𝙸𝙺𝙾࿐ツ",
   "prefix": ".",
   "ArYanapi": "",
   "api": "",
